gallery layout full

--- a/_posts/2015-02-06-gallery.md
+++ b/_posts/2015-02-06-gallery.md
@@ -23,6 +23,7 @@ gallery:
         alttext: Exotic
       - filename: gallery-8.jpg
         alttext: Filled out
+layout: post-full
 ---
 Here you'll find a simple gallery, that just adds all of the images at full-width directly in the post content.
 
