--- a/_posts/2015-01-31-vimeo.md
+++ b/_posts/2015-01-31-vimeo.md
@@ -7,6 +7,7 @@ title: Vimeo
 homedisplay: iframe
 tags: [video, iframe]
 category: [video]
+layout: post-full
 ---
 this is a video post using the vimeo format.
 
