--- a/_posts/2015-02-10-standard.md
+++ b/_posts/2015-02-10-standard.md
@@ -4,6 +4,7 @@ title: Standard Post
 featimg: 1.jpg
 tags: [text]
 category: [standard]
+layout: post-full
 ---
 Here you can see the basic post. No fancy type, no setting and the featured image is just embedded into the content.
 
