vimeo 测试优酷视频

--- a/_posts/2015-01-31-vimeo.md
+++ b/_posts/2015-01-31-vimeo.md
@@ -2,7 +2,7 @@
 
 author: person
 type: vimeo
-vimeo-embed: <iframe src="https://player.vimeo.com/video/107591790" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+vimeo-embed:<iframe height=498 width=510 src='http://player.youku.com/embed/XMTUwNTg4OTAwNA==' frameborder=0 'allowfullscreen'></iframe>
 title: Vimeo
 homedisplay: iframe
 tags: [video, iframe]
