--- a/_posts/2015-02-02-img-full.md
+++ b/_posts/2015-02-02-img-full.md
@@ -2,7 +2,7 @@
 author: someone
 layout: post-full
 type: image
-featimg: 5.jpg
+featimg: http://upload-images.jianshu.io/upload_images/1271438-bdb15b2c9303aea2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
 title: Image Full
 tags: [image]
 category: [image]
