--- a/_posts/2015-02-07-img.md
+++ b/_posts/2015-02-07-img.md
@@ -1,7 +1,7 @@
 ---
 author: someone
 type: image
-featimg: 3.jpg
+featimg: http://upload-images.jianshu.io/upload_images/1271438-bdb15b2c9303aea2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
 title: Image
 tags: [image]
 category: [image]
