--- a/_posts/2015-02-06-gallery.md
+++ b/_posts/2015-02-06-gallery.md
@@ -1,7 +1,7 @@
 ---
 author: someone
 type: gallery
-featimg: gallery-5.jpg
+featimg: http://upload-images.jianshu.io/upload_images/1271438-c9a2c15f26c9aafe.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
 title: Gallery
 tags: [gallery, image]
 category: [image]
