--- a/_posts/2015-02-09-youtube.md
+++ b/_posts/2015-02-09-youtube.md
@@ -1,9 +1,9 @@
 ---
-author: someone
-type: youtube
-yt-video-id: JUT-3jGyjoM
+author: person
+type: vimeo
+vimeo-embed: <iframe src="http://player.youku.com/embed/XMTUwNTg4OTAwNA==" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+title: Vimeo
 homedisplay: iframe
-title: YouTube
 tags: [video, iframe]
 category: [video]
 layout: post-full
