--- a/_posts/2015-02-06-gallery.md
+++ b/_posts/2015-02-06-gallery.md
@@ -5,25 +5,26 @@ featimg: http://upload-images.jianshu.io/upload_images/1271438-c9a2c15f26c9aafe.
 title: Gallery
 tags: [gallery, image]
 category: [image]
+layout: post-full
 gallery:
     - images:
-      - filename: gallery-1.jpg
+      - filename: http://upload-images.jianshu.io/upload_images/1271438-bdb15b2c9303aea2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
         alttext: Bloom Flat
-      - filename: gallery-2.jpg
+      - filename: http://upload-images.jianshu.io/upload_images/1271438-bdb15b2c9303aea2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
         alttext: Bloom
-      - filename: gallery-3.jpg
+      - filename: http://upload-images.jianshu.io/upload_images/1271438-bdb15b2c9303aea2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
         alttext: Blossom in a Star
-      - filename: gallery-4.jpg
+      - filename: http://upload-images.jianshu.io/upload_images/1271438-bdb15b2c9303aea2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
         alttext: Blossom
-      - filename: gallery-5.jpg
+      - filename: http://upload-images.jianshu.io/upload_images/1271438-bdb15b2c9303aea2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
         alttext: Bubbly Bloom
-      - filename: gallery-6.jpg
+      - filename: http://upload-images.jianshu.io/upload_images/1271438-bdb15b2c9303aea2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
         alttext: Rays of Gold
-      - filename: gallery-7.jpg
+      - filename: http://upload-images.jianshu.io/upload_images/1271438-bdb15b2c9303aea2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
         alttext: Exotic
-      - filename: gallery-8.jpg
-        alttext: Filled out
-layout: post-full
+      - filename: http://upload-images.jianshu.io/upload_images/1271438-bdb15b2c9303aea2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
+        alttext: 我是图片标题2
+
 ---
 Here you'll find a simple gallery, that just adds all of the images at full-width directly in the post content.
 
