测试外联音乐

--- a/_posts/2015-02-06-gallery.md
+++ b/_posts/2015-02-06-gallery.md
@@ -26,6 +26,10 @@ gallery:
         alttext: 我是图片标题2
 
 ---
+
+
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="http://music.163.com/outchain/player?type=2&id=32192436&auto=1&height=32"></iframe>
+
 Here you'll find a simple gallery, that just adds all of the images at full-width directly in the post content.
 
 <br>
