测试外联音乐

--- a/_posts/2015-02-06-gallery.md
+++ b/_posts/2015-02-06-gallery.md
@@ -6,6 +6,7 @@ title: Gallery
 tags: [gallery, image]
 category: [image]
 layout: post-full
+
 gallery:
     - images:
       - filename: http://upload-images.jianshu.io/upload_images/1271438-bdb15b2c9303aea2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
@@ -26,10 +27,10 @@ gallery:
         alttext: 我是图片标题2
 
 ---
-
+<div>
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="http://music.163.com/outchain/player?type=2&id=32192436&auto=1&height=32"></iframe>
 <embed class="play_music" height="100" width="400" src="http://music.163.com/outchain/player?type=2&id=32192436&auto=1&height=32" autostart="true" loop=“true”></embed>
-
+</div>
 Here you'll find a simple gallery, that just adds all of the images at full-width directly in the post content.
 
 <br>
