测试外联音乐

--- a/_posts/2015-02-06-gallery.md
+++ b/_posts/2015-02-06-gallery.md
@@ -6,6 +6,7 @@ title: Gallery
 tags: [gallery, image]
 category: [image]
 layout: post-full
+music: <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=27032788&auto=1&height=66"></iframe>
 
 gallery:
     - images:
@@ -27,6 +28,9 @@ gallery:
         alttext: 我是图片标题2
 
 ---
+
+{% include music.html %}
+
 <div>
     <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="http://music.163.com/outchain/player?type=2&id=32192436&auto=1&height=32"></iframe>
     <embed class="play_music" height="100" width="400" src="http://music.163.com/outchain/player?type=2&id=32192436&auto=1&height=32" autostart="true" loop=“true”></embed>
