--- a/_posts/2015-02-06-gallery.md
+++ b/_posts/2015-02-06-gallery.md
@@ -6,7 +6,7 @@ title: Gallery
 tags: [gallery, image]
 category: [image]
 layout: post-full
-music: <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=27032788&auto=1&height=66"></iframe>
+music: <embed src="//music.163.com/style/swf/widget.swf?sid=27032788&type=2&auto=1&width=320&height=66" width="340" height="86"  allowNetworking="all"></embed>
 
 gallery:
     - images:
