--- a/_posts/2015-02-06-gallery.md
+++ b/_posts/2015-02-06-gallery.md
@@ -6,7 +6,7 @@ title: Gallery
 tags: [gallery, image]
 category: [image]
 layout: post-full
-music: <embed src="//music.163.com/style/swf/widget.swf?sid=27032788&type=2&auto=1&width=320&height=86" width="340" height="86"  allowNetworking="all"></embed>
+music: <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=27032788&auto=1&height=66">
 
 gallery:
     - images:
@@ -28,10 +28,12 @@ gallery:
         alttext: 我是图片标题2
 
 ---
-
-{% include music.html %}
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=2&id=27032788&auto=1&height=32"></iframe>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=27032788&auto=1&height=66">
 
 Here you'll find a simple gallery, that just adds all of the images at full-width directly in the post content.
+
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=27032788&auto=1&height=66"></iframe>
 
 <br>
 
