--- a/_posts/2015-02-06-gallery.md
+++ b/_posts/2015-02-06-gallery.md
@@ -28,15 +28,13 @@ gallery:
         alttext: 我是图片标题2
 
 ---
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=2&id=27032788&auto=1&height=32"></iframe>
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=27032788&auto=1&height=66">
+
+<embed src="//music.163.com/style/swf/widget.swf?sid=27032788&type=2&auto=1&width=278&height=32" width="298" height="52"  allowNetworking="all">
+
+
 
 Here you'll find a simple gallery, that just adds all of the images at full-width directly in the post content.
 
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=27032788&auto=1&height=66"></iframe>
-
-<embed src="//music.163.com/style/swf/widget.swf?sid=27032788&type=2&auto=1&width=278&height=32" width="298" height="52"  allowNetworking="all"></embed>
-<embed src="//music.163.com/style/swf/widget.swf?sid=27032788&type=2&auto=1&width=320&height=66" width="340" height="86"  allowNetworking="all"></embed>
 
 <br>
 
