测试显示中文字数

--- a/_posts/2015-02-10-standard.md
+++ b/_posts/2015-02-10-standard.md
@@ -6,6 +6,7 @@ tags: [text]
 category: [standard]
 layout: post-full
 ---
-Here you can see the basic post. No fancy type, no setting and the featured image is just embedded into the content.
 
-The front matter for that basic post just consists of the basic tags, author, title, featimg, tags and category.
+
+测试显示中文字数;拉斯科极度分裂爱丽丝健康的阿狸撒旦法接口阿里斯顿发了解阿斯顿福利局卡萨丁浪费健康
+安顺了打卡积分拉水电费水电费了会计师对方 安顺来得及快疯了 阿斯顿爱上了的房价爱丽丝打飞机拉四季度发了驾驶地方绿卡极速达福利局撒 阿拉斯加地方啦都是风景水电费了就阿里都市客积分阿斯利康地方
