--- a/_posts/2015-02-06-gallery.md
+++ b/_posts/2015-02-06-gallery.md
@@ -29,7 +29,7 @@ gallery:
 
 ---
 
-<embed src="//music.163.com/style/swf/widget.swf?sid=27032788&type=2&auto=1&width=278&height=32" width="298" height="52"  allowNetworking="all">
+<embed src="//music.163.com/style/swf/widget.swf?sid=27032788&type=2&auto=1&width=278&height=32" width="298" height="52"  allowNetworking="all" autostart=true loop=true>
 
 Here you'll find a simple gallery, that just adds all of the images at full-width directly in the post content.
 
