背景音乐自动播放并循环

--- a/_posts/2015-02-06-gallery.md
+++ b/_posts/2015-02-06-gallery.md
@@ -6,8 +6,6 @@ title: Gallery
 tags: [gallery, image]
 category: [image]
 layout: post-full
-music: <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=27032788&auto=1&height=66">
-
 gallery:
     - images:
       - filename: http://upload-images.jianshu.io/upload_images/1271438-bdb15b2c9303aea2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
@@ -29,7 +27,7 @@ gallery:
 
 ---
 
-<embed src="//music.163.com/style/swf/widget.swf?sid=27032788&type=2&auto=1&width=278&height=32" width="298" height="52"  allowNetworking="all" autostart=true loop=true>
+<embed src="//music.163.com/style/swf/widget.swf?sid=27032788&type=2&auto=1&width=278&height=32" width="298" height="52"  allowNetworking="all" autostart="true" loop="true">
 
 Here you'll find a simple gallery, that just adds all of the images at full-width directly in the post content.
 
