--- a/_posts/2015-01-31-vimeo.md
+++ b/_posts/2015-01-31-vimeo.md
@@ -1,6 +1,6 @@
 ---
 
-author: 叶业力
+author: yeyeli
 type: vimeo
 vimeo-embed: <iframe src="http://player.youku.com/embed/XMTUwNTg4OTAwNA==" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 title: Vimeo
