vimeo添加音乐测试

--- a/_posts/2015-01-31-vimeo.md
+++ b/_posts/2015-01-31-vimeo.md
@@ -9,6 +9,11 @@ tags: [video, iframe]
 category: [video]
 layout: post-full
 ---
+
+<audio controls="controls" autoplay="autoplay" loop="loop" src="http://sc1.111ttt.com/2016/1/12/10/205101951372.mp3">浏览器不支持播放audio音频</audio>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=466122271&auto=1&height=66"></iframe>
+<embed src="//music.163.com/style/swf/widget.swf?sid=466122271&type=2&auto=1&width=320&height=66" width="340" height="86"  allowNetworking="all"></embed>
+<embed src="//music.163.com/style/swf/widget.swf?sid=466122271&type=2&auto=1&width=278&height=32" width="298" height="52"  allowNetworking="all"></embed>
 this is a video post using the vimeo format.
 
 To create one you just have to use the type-specific variables within the Front Matter and paste the embed code directly from vimeo.
