--- a/_posts/2017-02-06-ngrok.md
+++ b/_posts/2017-02-06-ngrok.md
@@ -1,7 +1,7 @@
 ---
 author: 叶业力
 title: 内网穿透-ngrok
-featimg: ![](http://upload-images.jianshu.io/upload_images/1271438-46c07330e8f74fc3.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+featimg: http://upload-images.jianshu.io/upload_images/1271438-46c07330e8f74fc3.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
 
 layout: post-full
 ---
