--- a/_posts/2017-02-06-ngrok.md
+++ b/_posts/2017-02-06-ngrok.md
@@ -1,7 +1,7 @@
 ---
 author: yeyeli
 title: 内网穿透-ngrok
-featimg: https://imgsa.baidu.com/baike/c0%3Dbaike92%2C5%2C5%2C92%2C30/sign=fc28bff79058d109d0eea1e0b031a7da/b21bb051f81986181706330d48ed2e738ad4e6f2.jpg
+featimg: http://upload-images.jianshu.io/upload_images/1271438-ac919bf5263a9eb0.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
 
 layout: post-full
 ---
