--- a/_posts/2017-02-06-ngrok.md
+++ b/_posts/2017-02-06-ngrok.md
@@ -6,9 +6,10 @@ featimg: http://upload-images.jianshu.io/upload_images/1271438-ac919bf5263a9eb0.
 layout: post-full
 ---
 
-# 内网穿透-ngrok
+## 内网穿透-ngrok
 
-### 导语:
+#### 导语:
+
 >很多时候公司电脑是没有公网ip, 都连路由器去了.当我们在进行一些开发时候,比如,支付需要回调通知,就只能将代码拉到服务器去调试,不方便.
     有ngrok就可以让你在内网环境享受外网待遇.
     其实ngrok 他本是官方是提供这个服务的,但是访问速度特别的慢,所以很多人还是选择在自己的服务器上面搭建这项服务.
@@ -17,15 +18,15 @@ layout: post-full
 #### 搭建环境: CentOS + mac
 
 ***
-### 详细步骤
-##### 1.安装环境
+##### 详细步骤
+###### 1.安装环境
 `yum install golang`
 `yum install supervisor`
-##### 2.下载资源
+###### 2.下载资源
 `git clone https://github.com/inconshreveable/ngrok.git`
 
 备用资源：`git clone https://github.com/tutumcloud/ngrok.git`
-##### 3.生成证书（操作在ngrok目录下）
+###### 3.生成证书（操作在ngrok目录下）
 ```
 NGROK_DOMAIN="yeli.photo"
 openssl genrsa -out rootCA.key 2048
@@ -40,7 +41,7 @@ openssl x509 -req -in device.csr -CA rootCA.pem -CAkey rootCA.key -CAcreateseria
 \cp device.crt assets/server/tls/snakeoil.crt  -f
 \cp device.key assets/server/tls/snakeoil.key -f
 ```
-##### 4.打包
+###### 4.打包
 服务端：`make release-server` ,生成的文件ngrokd就是我们需要的服务端文件。
 客户端(Mac):  `GOOS=darwin GOARCH=amd64 make release-client`, ngrok就是我们需要的客户端文件。
 其他平台:
@@ -54,7 +55,7 @@ MAC 平台 64 位系统：GOOS=darwin GOARCH=amd64
 ARM 平台：GOOS=linux GOARCH=arm
 ```
 
-##### 5.配置运行
+###### 5.配置运行
 服务端:**tunnelAddr 是通道的端口号，这个端口是Ngrok用来通信的，所以这个端口在服务器上和客户端上设置必须要对应才可以正常的链接，默认不填写好像是4433**
 ```
 #http:
@@ -81,8 +82,8 @@ trust_host_root_certs: false
 
 访问ngrok管理界面:`http://127.0.0.1:4040`
 ![](http://upload-images.jianshu.io/upload_images/1271438-46c07330e8f74fc3.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-#### **点击下面的链接就大功告成啦!**
+##### **点击下面的链接就大功告成啦!**
 ***
 ##### 附: ngrok工作流程
 http://ngrok.yeli.photo 请求首先访问服务器的8100端口, 这个端口是ngrok 在监听,收到消息通过ngrok 的服务端客户端链接端口8102,转发到mac 上面的ngrok ,收到消息再转发给本地端口8009.
-#### 就这样子的
+##### 就这样子的
