--- a/_posts/2017-02-06-ngrok.md
+++ b/_posts/2017-02-06-ngrok.md
@@ -6,16 +6,16 @@ featimg: http://upload-images.jianshu.io/upload_images/1271438-ac919bf5263a9eb0.
 layout: post-full
 ---
 
-## 内网穿透-ngrok
+### *内网穿透-ngrok*
 
-#### 导语:
+##### 导语:
 
 >很多时候公司电脑是没有公网ip, 都连路由器去了.当我们在进行一些开发时候,比如,支付需要回调通知,就只能将代码拉到服务器去调试,不方便.
     有ngrok就可以让你在内网环境享受外网待遇.
     其实ngrok 他本是官方是提供这个服务的,但是访问速度特别的慢,所以很多人还是选择在自己的服务器上面搭建这项服务.
     这篇文章就是主要记录怎样去一步一步的操作.
 
-#### 搭建环境: CentOS + mac
+##### 搭建环境: CentOS + mac
 
 ***
 ##### 详细步骤
