--- a/_posts/2017-02-06-ngrok.md
+++ b/_posts/2017-02-06-ngrok.md
@@ -5,9 +5,8 @@ featimg: http://upload-images.jianshu.io/upload_images/1271438-ac919bf5263a9eb0.
 
 layout: post-full
 ---
-
-### *内网穿透-ngrok*
-
+内网穿透-ngrok
+=============
 ##### 导语:
 
 >很多时候公司电脑是没有公网ip, 都连路由器去了.当我们在进行一些开发时候,比如,支付需要回调通知,就只能将代码拉到服务器去调试,不方便.
@@ -82,8 +81,8 @@ trust_host_root_certs: false
 
 访问ngrok管理界面:`http://127.0.0.1:4040`
 ![](http://upload-images.jianshu.io/upload_images/1271438-46c07330e8f74fc3.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-##### **点击下面的链接就大功告成啦!**
+###### **点击下面的链接就大功告成啦!**
 ***
-##### 附: ngrok工作流程
+###### 附: ngrok工作流程
 http://ngrok.yeli.photo 请求首先访问服务器的8100端口, 这个端口是ngrok 在监听,收到消息通过ngrok 的服务端客户端链接端口8102,转发到mac 上面的ngrok ,收到消息再转发给本地端口8009.
 ##### 就这样子的
