添加2017-02-10-linux.md 替换封面

--- a/_posts/2017-02-10-linux.md
+++ b/_posts/2017-02-10-linux.md
@@ -1,7 +1,7 @@
 ---
 author: yeyeli
 type: image
-featimg: http://upload-images.jianshu.io/upload_images/1271438-bdb15b2c9303aea2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
+featimg: http://upload-images.jianshu.io/upload_images/1271438-15e7581ca1a8bce3.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
 title: 初学Linux
 layout: post-full
 ---
