给 初学Linux 添加参考资料

--- a/_posts/2017-02-10-linux.md
+++ b/_posts/2017-02-10-linux.md
@@ -7,7 +7,7 @@ layout: post-full
 ---
 
 
-
+<a href="http://linux.vbird.org/new_linux.php" target="_blank">参考资料:鸟哥的Linux私房菜</a>
 ##### 常用命令
 
 查看内存: `free -h`
