--- a/_posts/2015-02-09-youtube.md
+++ b/_posts/2015-02-09-youtube.md
@@ -3,7 +3,7 @@ author: person
 type: vimeo
 vimeo-embed: <iframe src="http://player.youku.com/embed/XMTUwNTg4OTAwNA==" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 title: Vimeo
-homedisplay: iframe
+homedisplay:
 tags: [video, iframe]
 category: [video]
 layout: post-full
