--- a/_posts/2015-02-09-youtube.md
+++ b/_posts/2015-02-09-youtube.md
@@ -4,6 +4,7 @@ type: vimeo
 vimeo-embed: <iframe src="http://player.youku.com/embed/XMTUwNTg4OTAwNA==" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 title: Vimeo
 homedisplay:
+featimg: http://upload-images.jianshu.io/upload_images/1271438-bdb15b2c9303aea2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240
 tags: [video, iframe]
 category: [video]
 layout: post-full
