添加燕子沟外游记添加音乐

--- a/_posts/2015-01-04-yanzigou.md
+++ b/_posts/2015-01-04-yanzigou.md
@@ -6,10 +6,12 @@ tags: [text]
 category: [standard]
 layout: post-full
 ---
-<audio src="http://link.hhtjim.com/163/139774.mp3" controls="controls" autoplay="autoplay" loop="loop"></audio>
+
 
 
 >去燕子沟那边已经回来两三天了，期间还回了趟家，一直没空。所以既没整理照片，也没写流水账。昨天一回到宿舍就迫不及待的把存储卡插进电脑，在这总共7G、400多张的照片的帮助下，回想了这4天所看见的各种美景……
+
+&emsp;&emsp;<audio src="http://link.hhtjim.com/163/139774.mp3" controls="controls" autoplay="autoplay" loop="loop"></audio>
 
 
 &emsp;&emsp; 燕子沟是海螺沟的姊妹沟，位于海螺沟西北10余公里的地方，周围有15座5000米以上的高峰，从海拔2100米逐次向上延伸至7556米的贡嘎山主峰，目前还是一个鲜有人迹的地方。沟内的景色原始自然，特有的红石沟和奇沟内的石头千奇百怪，大面积的彩叶林带更是秋天的宠儿 。燕子沟也是一条著名的国际登山旅游路线，攀登贡嘎山的运动员大多在这里设立大本营。当然，很多牺牲的队员也被埋在了这沟里面。
