--- a/_posts/2015-01-04-yanzigou.md
+++ b/_posts/2015-01-04-yanzigou.md
@@ -5,7 +5,7 @@ featimg: http://upload-images.jianshu.io/upload_images/1271438-e9123d32315be8a4.
 type: image
 layout: post-full
 ---
-&emsp;&emsp;<audio src="http://link.hhtjim.com/163/139774.mp3" controls="controls" autoplay="autoplay" loop="loop"></audio>
+<audio src="http://link.hhtjim.com/163/139774.mp3" controls="controls" autoplay="autoplay" loop="loop"></audio>
 
 >去燕子沟那边已经回来两三天了，期间还回了趟家，一直没空。所以既没整理照片，也没写流水账。昨天一回到宿舍就迫不及待的把存储卡插进电脑，在这总共7G、400多张的照片的帮助下，回想了这4天所看见的各种美景……
 
